--- a/app/src/main/res/layout/fragment_create_lobby.xml
+++ b/app/src/main/res/layout/fragment_create_lobby.xml
@@ -21,13 +21,13 @@
         android:id="@+id/btnBack"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:layout_marginStart="16dp"
         android:background="@drawable/background_button"
-        android:contentDescription="@string/desc_back"
+        android:contentDescription="@string/desc_leave"
         android:padding="8dp"
         android:scaleType="fitCenter"
         android:src="@drawable/ic_round_arrow_back_24"
         app:layout_constraintBottom_toBottomOf="@+id/tvTitle"
+        app:layout_constraintEnd_toStartOf="@+id/tvTitle"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/tvTitle"
         app:tint="?colorOnPrimary" />
@@ -193,7 +193,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:checked="true"
-            android:text="Timer" />
+            android:text="@string/game_mode_highest_score" />
 
         <com.google.android.material.chip.Chip
             android:id="@+id/chipBattleRoyale"
@@ -201,7 +201,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:checked="false"
-            android:text="@string/battle_royale" />
+            android:text="@string/game_mode_battle_royale" />
 
     </com.google.android.material.chip.ChipGroup>
 
@@ -213,7 +213,7 @@
         android:background="@drawable/background_button_secondary"
         android:fontFamily="@font/fira_sans_bold"
         android:padding="8dp"
-        android:text="@string/reset_settings"
+        android:text="@string/reset_lobby_settings"
         android:textAllCaps="false"
         android:textColor="?colorOnSecondary"
         android:textSize="20sp" />
