--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -11,7 +11,7 @@
         android:id="@+id/gameView"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_marginEnd="70dp"
+        android:layout_marginEnd="80dp"
         app:backgroundColor="?colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -20,9 +20,11 @@
 
     <ViewStub
         android:id="@+id/stub"
-        android:layout_width="70dp"
+        android:layout_width="80dp"
         android:layout_height="match_parent"
         android:inflatedId="@+id/included"
+        android:layout="@layout/sidebar_multiplayer"
+        tools:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/gameView"
@@ -35,7 +37,7 @@
         android:layout_marginEnd="20dp"
         android:background="@drawable/background_button"
         android:backgroundTint="?colorGameButton"
-        android:contentDescription="@string/desc_left"
+        android:contentDescription="@string/desc_move_left"
         android:padding="16dp"
         android:scaleType="fitCenter"
         android:src="@drawable/ic_round_arrow_left_24"
@@ -51,7 +53,7 @@
         android:layout_marginEnd="32dp"
         android:background="@drawable/background_button"
         android:backgroundTint="?colorGameButton"
-        android:contentDescription="@string/desc_right"
+        android:contentDescription="@string/desc_move_right"
         android:padding="16dp"
         android:scaleType="fitCenter"
         android:src="@drawable/ic_round_arrow_right_24"
@@ -67,7 +69,7 @@
         android:layout_marginBottom="32dp"
         android:background="@drawable/background_button"
         android:backgroundTint="?colorGameButton"
-        android:contentDescription="@string/desc_down"
+        android:contentDescription="@string/desc_move_down"
         android:padding="16dp"
         android:scaleType="fitCenter"
         android:src="@drawable/ic_round_arrow_drop_down_24"
