--- a/app/src/main/res/layout/fragment_leaderboard.xml
+++ b/app/src/main/res/layout/fragment_leaderboard.xml
@@ -9,13 +9,13 @@
         android:id="@+id/btnBack"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/background_button"
-        android:contentDescription="@string/desc_resume"
+        android:contentDescription="@string/desc_leave"
         android:padding="8dp"
         android:scaleType="fitCenter"
         android:src="@drawable/ic_round_arrow_back_24"
+        app:layout_constraintEnd_toStartOf="@+id/tvScoreboard"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:tint="?colorOnPrimary" />
@@ -56,7 +56,7 @@
         android:layout_height="48dp"
         android:layout_margin="16dp"
         android:background="@drawable/background_button_secondary"
-        android:contentDescription="@string/desc_resume"
+        android:contentDescription="@string/desc_prev_page"
         android:padding="8dp"
         android:scaleType="fitCenter"
         android:src="@drawable/ic_round_arrow_left_24"
@@ -88,7 +88,7 @@
         android:layout_height="48dp"
         android:layout_margin="16dp"
         android:background="@drawable/background_button_secondary"
-        android:contentDescription="@string/desc_resume"
+        android:contentDescription="@string/desc_next_page"
         android:padding="8dp"
         android:scaleType="fitCenter"
         android:src="@drawable/ic_round_arrow_right_24"
