--- a/app/src/main/res/layout/fragment_pause.xml
+++ b/app/src/main/res/layout/fragment_pause.xml
@@ -13,7 +13,7 @@
         android:layout_marginBottom="24dp"
         android:fontFamily="@font/fira_sans_bold"
         android:includeFontPadding="false"
-        android:text="@string/pause_text"
+        android:text="@string/paused"
         android:textColor="?colorOnPrimary"
         android:textSize="64sp"
         app:layout_constraintBottom_toTopOf="@+id/flow2"
@@ -39,7 +39,7 @@
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:background="@drawable/background_button"
-        android:contentDescription="@string/desc_leave"
+        android:contentDescription="@string/desc_back"
         android:padding="8dp"
         android:scaleType="fitCenter"
         android:src="@drawable/ic_round_arrow_back_24"
