--- a/app/src/main/res/layout/fragment_scores_list.xml
+++ b/app/src/main/res/layout/fragment_scores_list.xml
@@ -13,7 +13,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/background_button"
-        android:contentDescription="@string/desc_resume"
+        android:contentDescription="@string/desc_leave"
         android:padding="8dp"
         android:scaleType="fitCenter"
         android:src="@drawable/ic_round_arrow_back_24"
