--- a/app/src/main/res/layout/sidebar.xml
+++ b/app/src/main/res/layout/sidebar.xml
@@ -4,8 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingHorizontal="4dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:showIn="@layout/fragment_game">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -17,7 +16,7 @@
             android:layout_height="wrap_content"
             android:text="@string/next"
             android:fontFamily="@font/fira_sans_bold"
-            android:textSize="18sp"
+            android:textSize="16sp"
             android:textColor="?colorOnPrimary"
             android:includeFontPadding="false"
             android:textAlignment="center" />
@@ -96,7 +95,7 @@
             android:layout_height="wrap_content"
             android:text="@string/hold"
             android:fontFamily="@font/fira_sans_bold"
-            android:textSize="18sp"
+            android:textSize="16sp"
             android:textColor="?colorOnPrimary"
             android:includeFontPadding="false"
             android:textAlignment="center" />
@@ -123,7 +122,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/fira_sans_bold"
-            android:textSize="18sp"
+            android:textSize="16sp"
             android:includeFontPadding="false"
             android:text="@string/score"
             android:textAlignment="center"
@@ -136,7 +135,7 @@
             android:padding="4dp"
             android:background="@drawable/background_game_value"
             android:fontFamily="@font/fira_sans_medium"
-            android:textSize="16sp"
+            android:textSize="14sp"
             android:includeFontPadding="false"
             tools:text="00000000"
             android:textAlignment="center"
@@ -147,7 +146,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/fira_sans_bold"
-            android:textSize="18sp"
+            android:textSize="16sp"
             android:includeFontPadding="false"
             android:text="@string/lines"
             android:textAlignment="center"
@@ -160,7 +159,7 @@
             android:padding="4dp"
             android:background="@drawable/background_game_value"
             android:fontFamily="@font/fira_sans_medium"
-            android:textSize="16sp"
+            android:textSize="14sp"
             android:includeFontPadding="false"
             tools:text="00000000"
             android:textAlignment="center"
@@ -171,7 +170,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/fira_sans_bold"
-            android:textSize="18sp"
+            android:textSize="16sp"
             android:includeFontPadding="false"
             android:text="@string/level"
             android:textAlignment="center"
@@ -184,7 +183,7 @@
             android:padding="4dp"
             android:background="@drawable/background_game_value"
             android:fontFamily="@font/fira_sans_medium"
-            android:textSize="16sp"
+            android:textSize="14sp"
             android:includeFontPadding="false"
             tools:text="00000000"
             android:textAlignment="center"
@@ -195,7 +194,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/fira_sans_bold"
-            android:textSize="18sp"
+            android:textSize="16sp"
             android:includeFontPadding="false"
             android:text="@string/combo"
             android:textAlignment="center"
@@ -208,7 +207,7 @@
             android:padding="4dp"
             android:background="@drawable/background_game_value"
             android:fontFamily="@font/fira_sans_medium"
-            android:textSize="16sp"
+            android:textSize="14sp"
             android:includeFontPadding="false"
             tools:text="00000000"
             android:textAlignment="center"
