--- a/app/src/main/res/menu/menu_invite_code_action.xml
+++ b/app/src/main/res/menu/menu_invite_code_action.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/copy_code"
         android:iconTint="?colorOnPrimary"
         android:icon="@drawable/ic_round_content_copy_24"
-        android:title="Copy" />
+        android:title="@string/copy" />
     <item android:id="@+id/share_code"
         android:iconTint="?colorOnPrimary"
         android:icon="@drawable/ic_round_share_24"
-        android:title="Share" />
+        android:title="@string/share" />
 </menu>
